cleaning up notebook

--- a/spec_viewers.ipynb
+++ b/spec_viewers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,13 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5054c4048ea349058cfde99aeace0a01",
+       "model_id": "1286f02e4e3e42ee8a52f54187a8d9fc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -50,12 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# set the jwst target sources and randomly select one to start with\n",
     "jwst_sources = [227, 482, 546, 1186]\n",
     "selected_src = jwst_sources[np.random.randint(0,3)]\n",
+    "\n",
     "def prep_data(source):\n",
     "    ''' prepare test data '''\n",
     "    path = '/Users/bcherinka/Work/mosviz/data'\n",
@@ -70,34 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# get the data for the selected source\n",
     "hdu1d, hdu, cut = prep_data(selected_src)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hdu1d.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hdu1d[1].data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,23 +91,31 @@
     "    wave = data['WAVELENGTH']\n",
     "    flux = data['FLUX']\n",
     "    return wave, flux\n",
+    "\n",
+    "# get the x and y values for the 1d spectrum plot\n",
     "wave, flux = get_xy(hdu1d[1].data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    " hdu.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "76e7ca60ef864ea3961b98a46b4f94ad",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(axes=[Axis(scale=LinearScale()), Axis(orientation='vertical', scale=LinearScale())], fig_margin={'top':…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "def create_spec1d(x, y):\n",
     "    ''' create a bqplot line chart for a 1d spectrum '''\n",
@@ -131,34 +124,16 @@
     "    fig.layout.width = 'auto'\n",
     "    fig.layout.height = 'auto'\n",
     "    fig.layout.min_height = '400px' # so it shows nicely in the notebook\n",
-    "    return fig, p"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'wave' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-20-4d4c5ad0a0a0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfig\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mplot\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcreate_spec1d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwave\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflux\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mfig\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'wave' is not defined"
-     ]
-    }
-   ],
-   "source": [
+    "    return fig, p\n",
+    "\n",
+    "# create the 1d spectrum plot\n",
     "fig, plot = create_spec1d(wave, flux)\n",
     "fig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,13 +180,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64e5d0b4f5e44c9a8cdb19d86e595c11",
+       "model_id": "06533664c659462c9b0a293a6a1a7e09",
        "version_major": 2,
        "version_minor": 0
       },
@@ -224,14 +199,14 @@
     }
    ],
    "source": [
-    "# 2d spectra image as heatmap\n",
+    "# create the 2d spectra image as a heatmap\n",
     "spec2d, heat = create_spec2d_heatmap(hdu[1].data)\n",
     "spec2d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,13 +224,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd0254d2b0ef4ad99750f27c37e0d100",
+       "model_id": "6fa5feb137bc43c2b86ebca3e41bf51a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -268,19 +243,19 @@
     }
    ],
    "source": [
+    "# create the image cutout\n",
     "img, image = create_cutout(cut[0].data, target=selected_src)\n",
     "img"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "@out.capture()\n",
     "def update_data(widget, event, data):\n",
-    "    #selected_src = jwst_sources[np.random.randint(0,3)]\n",
     "    # get new data from selected target\n",
     "    selected_src = int(data)\n",
     "    hdu1d, hdu, cut = prep_data(selected_src)\n",
@@ -293,17 +268,20 @@
     "    # update spec2d data\n",
     "    i = PercentileInterval(95)\n",
     "    heat.color = i(hdu[1].data)\n",
+    "\n",
     "    print('selected source', selected_src)\n",
     "    print('old image title', img.title)\n",
+    "\n",
     "    # update image cutout data\n",
     "    image.color = cut[0].data\n",
     "    img.title = 'Src {0}'.format(selected_src)\n",
+    "    \n",
     "    print('new image title', img.title)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,24 +294,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e3969954a1f4010b9dc6562119b5063",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "UpdateRow(children=[Col(children=[Figure(axes=[ColorAxis(scale=ColorScale(reverse=True, scheme='Greys'), visib…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create the Vuetify layout using v.Row and v.Col (Vuetify API v2.0 spec - replaces v.Layout and v.Flex, respectively)\n",
     "row = v.Row(_metadata={'mount_id': 'protospec'}, dense=True, row=True, wrap=True, align_center=True, children=[\n",
@@ -352,19 +315,20 @@
     "        fig\n",
     "    ]),       \n",
     "])\n",
+    "\n",
     "# attach a change event so the Layout to update the data of all three components\n",
     "row.on_event('change', update_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d457c67649ed4b7f9aa68ac1aeed7451",
+       "model_id": "a6661b6cd4e8490bbc7904f43c47d67b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -378,80 +342,11 @@
    ],
    "source": [
     "# create an app bar to load a select button\n",
-    "\n",
-    "#btn1 = v.Btn(color='primary', children=['Choose Data'])\n",
-    "#btn1.on_event('click', update_data)\n",
-    "\n",
     "btn1 = v.Select(dense=True, outlined=True, label='Target', items=jwst_sources)\n",
     "btn1.on_event('change', update_data)\n",
     "v.AppBar(_metadata={'mount_id': 'appbar'}, app=True, absolute=True, children=[\n",
     "    v.Col(class_='col-md-2 col-lg-2', children=[btn1])\n",
     "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "source None\n"
-     ]
-    }
-   ],
-   "source": [
-    "init_source = None\n",
-    "def set_source(widget, event, data):\n",
-    "    global init_source\n",
-    "    init_source = data\n",
-    "    print('init source', init_source)\n",
-    "\n",
-    "print('source', init_source)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2eaf2bb746aa4d01a2dd33c712b6260a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Event(children=['target: None'])"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "class Event(v.Chip):\n",
-    "    @out.capture()\n",
-    "    def __init__(self, **kwargs):\n",
-    "        super().__init__(**kwargs)\n",
-    "        #self.class_ = 'px-2'\n",
-    "        #self.on_msg(self.handle_custom_message)\n",
-    "        \n",
-    "        #self.nr_of_clicks = 0;\n",
-    "#         def on_c(widget, evemt, data):\n",
-    "#             self.nr_of_clicks += 1\n",
-    "#             self.children = [f'clicks {self.nr_of_clicks}']\n",
-    "\n",
-    "        self.on_event('change', update_data)\n",
-    "\n",
-    "#     def handle_custom_message(self, _, content, buffers):\n",
-    "#         if 'type' in content.keys() and content['type'] == 'custom':\n",
-    "#             self.children=[f'{content[\"time\"]}']\n",
-    "\n",
-    "Event(_metadata={'mount_id': 'init_target'}, children=[f'target: {init_source}'])\n"
    ]
   },
   {
