--- a/spec_viewers.ipynb
+++ b/spec_viewers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,24 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1286f02e4e3e42ee8a52f54187a8d9fc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# this is a widget for debugging\n",
     "out = widgets.Output()\n",
@@ -50,13 +35,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# set the jwst target sources and randomly select one to start with\n",
     "jwst_sources = [227, 482, 546, 1186]\n",
-    "selected_src = jwst_sources[np.random.randint(0,3)]\n",
+    "#selected_src = jwst_sources[np.random.randint(0,3)]\n",
     "\n",
     "def prep_data(source):\n",
     "    ''' prepare test data '''\n",
@@ -72,17 +57,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# get the data for the selected source\n",
-    "hdu1d, hdu, cut = prep_data(selected_src)"
+    "# hdu1d, hdu, cut = prep_data(selected_src)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,48 +77,33 @@
     "    flux = data['FLUX']\n",
     "    return wave, flux\n",
     "\n",
-    "# get the x and y values for the 1d spectrum plot\n",
-    "wave, flux = get_xy(hdu1d[1].data)"
+    "# # get the x and y values for the 1d spectrum plot\n",
+    "# wave, flux = get_xy(hdu1d[1].data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76e7ca60ef864ea3961b98a46b4f94ad",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Figure(axes=[Axis(scale=LinearScale()), Axis(orientation='vertical', scale=LinearScale())], fig_margin={'top':…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def create_spec1d(x, y):\n",
     "    ''' create a bqplot line chart for a 1d spectrum '''\n",
-    "    fig = plt.figure('Spectrum 1d')\n",
+    "    fig = plt.figure(title='Spectrum 1d')\n",
     "    p = plt.plot(x, y)\n",
     "    fig.layout.width = 'auto'\n",
     "    fig.layout.height = 'auto'\n",
     "    fig.layout.min_height = '400px' # so it shows nicely in the notebook\n",
     "    return fig, p\n",
     "\n",
-    "# create the 1d spectrum plot\n",
-    "fig, plot = create_spec1d(wave, flux)\n",
-    "fig"
+    "# # create the 1d spectrum plot\n",
+    "# fig, plot = create_spec1d(wave, flux)\n",
+    "# fig"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,33 +150,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06533664c659462c9b0a293a6a1a7e09",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Figure(axes=[ColorAxis(scale=ColorScale(reverse=True, scheme='Greys'), visible=False), Axis(scale=LinearScale(…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# create the 2d spectra image as a heatmap\n",
-    "spec2d, heat = create_spec2d_heatmap(hdu[1].data)\n",
-    "spec2d"
+    "# # create the 2d spectra image as a heatmap\n",
+    "# spec2d, heat = create_spec2d_heatmap(hdu[1].data)\n",
+    "# spec2d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,64 +179,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6fa5feb137bc43c2b86ebca3e41bf51a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Figure(axes=[ColorAxis(scale=ColorScale(reverse=True, scheme='Greys'), visible=False), Axis(scale=LinearScale(…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# create the image cutout\n",
-    "img, image = create_cutout(cut[0].data, target=selected_src)\n",
-    "img"
+    "# # create the image cutout\n",
+    "# img, image = create_cutout(cut[0].data, target=selected_src)\n",
+    "# img"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# @out.capture()\n",
+    "# def update_data(widget, event, data):\n",
+    "#     # get new data from selected target\n",
+    "#     selected_src = int(data)\n",
+    "#     hdu1d, hdu, cut = prep_data(selected_src)\n",
+    "\n",
+    "#     # update spec1d data\n",
+    "#     wave, flux = get_xy(hdu1d[1].data)\n",
+    "#     plot.y = flux\n",
+    "#     plot.x = wave\n",
+    "\n",
+    "#     # update spec2d data\n",
+    "#     i = PercentileInterval(95)\n",
+    "#     heat.color = i(hdu[1].data)\n",
+    "\n",
+    "#     print('selected source', selected_src)\n",
+    "#     print('old image title', img.title)\n",
+    "\n",
+    "#     # update image cutout data\n",
+    "#     image.color = cut[0].data\n",
+    "#     img.title = 'Src {0}'.format(selected_src)\n",
+    "    \n",
+    "#     print('new image title', img.title)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "@out.capture()\n",
-    "def update_data(widget, event, data):\n",
-    "    # get new data from selected target\n",
-    "    selected_src = int(data)\n",
+    "def update_data(selected_src):\n",
     "    hdu1d, hdu, cut = prep_data(selected_src)\n",
-    "\n",
+    "    \n",
     "    # update spec1d data\n",
     "    wave, flux = get_xy(hdu1d[1].data)\n",
-    "    plot.y = flux\n",
-    "    plot.x = wave\n",
+    "    fig, plot = create_spec1d(wave, flux)\n",
+    "    print('plot info', len(plot.x), len(plot.y))\n",
     "\n",
-    "    # update spec2d data\n",
-    "    i = PercentileInterval(95)\n",
-    "    heat.color = i(hdu[1].data)\n",
-    "\n",
+    "    spec2d, heat = create_spec2d_heatmap(hdu[1].data)\n",
     "    print('selected source', selected_src)\n",
-    "    print('old image title', img.title)\n",
+    "   \n",
+    "    img, image = create_cutout(cut[0].data, target=selected_src)\n",
+    " \n",
+    "    print('new image title', img.title)\n",
+    "    children = [\n",
+    "            # load the histogram and slider content\n",
+    "            v.Col(xs12=True, lg6=True, xl4=True, children=[\n",
+    "                img\n",
+    "            ]),\n",
     "\n",
-    "    # update image cutout data\n",
-    "    image.color = cut[0].data\n",
-    "    img.title = 'Src {0}'.format(selected_src)\n",
-    "    \n",
-    "    print('new image title', img.title)\n"
+    "            # load the line plot content\n",
+    "            v.Col(xs12=True, xl4=True, children=[\n",
+    "                spec2d\n",
+    "            ]),\n",
+    "            # load the line plot content\n",
+    "            v.Col(xs12=True, xl4=True, children=[\n",
+    "                fig\n",
+    "            ]),       \n",
+    "    ]\n",
+    "    row.children = children"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,56 +273,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create the Vuetify layout using v.Row and v.Col (Vuetify API v2.0 spec - replaces v.Layout and v.Flex, respectively)\n",
-    "row = v.Row(_metadata={'mount_id': 'protospec'}, dense=True, row=True, wrap=True, align_center=True, children=[\n",
+    "# # create the Vuetify layout using v.Row and v.Col (Vuetify API v2.0 spec - replaces v.Layout and v.Flex, respectively)\n",
+    "# row = v.Row(_metadata={'mount_id': 'protospec'}, dense=True, row=True, wrap=True, align_center=True, children=[\n",
     "\n",
-    "    # load the histogram and slider content\n",
-    "    v.Col(xs12=True, lg6=True, xl4=True, children=[\n",
-    "        img\n",
-    "    ]),\n",
+    "#     # load the histogram and slider content\n",
+    "#     v.Col(xs12=True, lg6=True, xl4=True, children=[\n",
+    "#         img\n",
+    "#     ]),\n",
     "\n",
-    "    # load the line plot content\n",
-    "    v.Col(xs12=True, xl4=True, children=[\n",
-    "        spec2d\n",
-    "    ]),\n",
-    "    # load the line plot content\n",
-    "    v.Col(xs12=True, xl4=True, children=[\n",
-    "        fig\n",
-    "    ]),       \n",
-    "])\n",
+    "#     # load the line plot content\n",
+    "#     v.Col(xs12=True, xl4=True, children=[\n",
+    "#         spec2d\n",
+    "#     ]),\n",
+    "#     # load the line plot content\n",
+    "#     v.Col(xs12=True, xl4=True, children=[\n",
+    "#         fig\n",
+    "#     ]),       \n",
+    "# ])\n",
     "\n",
-    "# attach a change event so the Layout to update the data of all three components\n",
-    "row.on_event('change', update_data)"
+    "# # attach a change event so the Layout to update the data of all three components\n",
+    "# row.on_event('change', update_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a6661b6cd4e8490bbc7904f43c47d67b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "AppBar(absolute=True, app=True, children=[Col(children=[Select(dense=True, items=[227, 482, 546, 1186], label=…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "@out.capture()\n",
+    "def update_data_handler(widget, event, data):\n",
+    "    # get new data from selected target\n",
+    "    selected_src = int(data)\n",
+    "    print('selected_src', selected_src)\n",
+    "    update_data(selected_src)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "row = v.Row(_metadata={'mount_id': 'protospec'}, dense=True, row=True, wrap=True, align_center=True, children=['Loading..'])\n",
+    "row.on_event('change', update_data_handler)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# create an app bar to load a select button\n",
     "btn1 = v.Select(dense=True, outlined=True, label='Target', items=jwst_sources)\n",
-    "btn1.on_event('change', update_data)\n",
+    "btn1.on_event('change', update_data_handler)\n",
     "v.AppBar(_metadata={'mount_id': 'appbar'}, app=True, absolute=True, children=[\n",
     "    v.Col(class_='col-md-2 col-lg-2', children=[btn1])\n",
     "])"
