updating specviz protoype notebook to use API STIS examples

--- a/spec_viewers.ipynb
+++ b/spec_viewers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,14 +18,32 @@
     "import ipyvuetify as v\n",
     "from ipywidgets import Layout\n",
     "import ipywidgets as widgets\n",
-    "import traitlets\n"
+    "import traitlets\n",
+    "from astroquery.mast import Observations\n",
+    "import requests\n",
+    "from io import BytesIO"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fb6c120561e5421881c566698e28d5b9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# this is a widget for debugging\n",
     "out = widgets.Output()\n",
@@ -35,39 +53,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set the jwst target sources and randomly select one to start with\n",
-    "jwst_sources = [227, 482, 546, 1186]\n",
-    "#selected_src = jwst_sources[np.random.randint(0,3)]\n",
-    "\n",
-    "def prep_data(source):\n",
-    "    ''' prepare test data '''\n",
-    "    path = '/Users/bcherinka/Work/mosviz/data'\n",
-    "    path1d = os.path.join(path, 'jwst_level3_NIRSpec/jw95065_{0}_nrs_msaspec_barshadow_x1d.fits'.format(source))\n",
-    "    path2d = os.path.join(path, 'jwst_level3_NIRSpec/jw95065_{0}_nrs_msaspec_barshadow_s2d.fits'.format(source))\n",
-    "    pathimg = os.path.join(path, 'jwst_level3_NIRSpec/cutouts/SOURCEID_{0}.fits'.format(source))\n",
-    "    hdu1d = fits.open(path1d)\n",
-    "    hdu2d = fits.open(path2d)\n",
-    "    cut = fits.open(pathimg)\n",
-    "    return hdu1d, hdu2d, cut"
+    "# set the STIS targets for demo \n",
+    "targets = ['NGC346', 'SN2001EP']\n",
+    "obsid = ['odg602060', 'o6gl37030']\n",
+    "tozip = list(zip(targets, obsid))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# get the data for the selected source\n",
-    "# hdu1d, hdu, cut = prep_data(selected_src)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,15 +73,12 @@
     "    ''' get the xy data '''\n",
     "    wave = data['WAVELENGTH']\n",
     "    flux = data['FLUX']\n",
-    "    return wave, flux\n",
-    "\n",
-    "# # get the x and y values for the 1d spectrum plot\n",
-    "# wave, flux = get_xy(hdu1d[1].data)"
+    "    return wave, flux"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,16 +89,12 @@
     "    fig.layout.width = 'auto'\n",
     "    fig.layout.height = 'auto'\n",
     "    fig.layout.min_height = '400px' # so it shows nicely in the notebook\n",
-    "    return fig, p\n",
-    "\n",
-    "# # create the 1d spectrum plot\n",
-    "# fig, plot = create_spec1d(wave, flux)\n",
-    "# fig"
+    "    return fig, p"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,45 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_spec2d_image(data):\n",
-    "    ''' create a 2d spectrum view as a bqplot ImageGL'''\n",
-    "    scale_x = LinearScale()\n",
-    "    scale_y = LinearScale()\n",
-    "    scales = {'x': scale_x,\n",
-    "              'y': scale_y}\n",
-    "    axis_x = Axis(scale=scale_x, label='x')\n",
-    "    axis_y = Axis(scale=scale_y, label='y', orientation='vertical')\n",
-    "\n",
-    "    spec2d = Figure(scales=scales, axes=[axis_x, axis_y])\n",
-    "\n",
-    "    scales_image = {'x': scale_x,\n",
-    "                    'y': scale_y,\n",
-    "                    'image': ColorScale(scheme='viridis', min=0, max=3)}\n",
-    "\n",
-    "    image = ImageGL(image=hdu[1].data, scales=scales_image)\n",
-    "\n",
-    "    spec2d.marks = (image,)\n",
-    "    return spec2d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # create the 2d spectra image as a heatmap\n",
-    "# spec2d, heat = create_spec2d_heatmap(hdu[1].data)\n",
-    "# spec2d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,67 +132,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # create the image cutout\n",
-    "# img, image = create_cutout(cut[0].data, target=selected_src)\n",
-    "# img"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# @out.capture()\n",
-    "# def update_data(widget, event, data):\n",
-    "#     # get new data from selected target\n",
-    "#     selected_src = int(data)\n",
-    "#     hdu1d, hdu, cut = prep_data(selected_src)\n",
-    "\n",
-    "#     # update spec1d data\n",
-    "#     wave, flux = get_xy(hdu1d[1].data)\n",
-    "#     plot.y = flux\n",
-    "#     plot.x = wave\n",
-    "\n",
-    "#     # update spec2d data\n",
-    "#     i = PercentileInterval(95)\n",
-    "#     heat.color = i(hdu[1].data)\n",
-    "\n",
-    "#     print('selected source', selected_src)\n",
-    "#     print('old image title', img.title)\n",
-    "\n",
-    "#     # update image cutout data\n",
-    "#     image.color = cut[0].data\n",
-    "#     img.title = 'Src {0}'.format(selected_src)\n",
+    "def retrieve_obs(targetid):\n",
+    "    ''' retrieve observation of target using astroquery '''\n",
+    "    try:\n",
+    "        ot = Observations.query_criteria(objectname=targetid, project='HST', radius='0.5 arcmin', intentType='science')\n",
+    "    except Exception:\n",
+    "        return None\n",
+    "    else:\n",
+    "        dp = Observations.get_product_list(ot)\n",
+    "        return dp\n",
     "    \n",
-    "#     print('new image title', img.title)\n"
+    "def get_type(dp, datatype, groupby=None):\n",
+    "    ''' filter data product list by image/spectrum types '''\n",
+    "    sub = ['RAW'] if datatype == 'image' else ['X1D', 'X2D']\n",
+    "    fp = Observations.filter_products(dp, productSubGroupDescription=sub, dataproduct_type=datatype)\n",
+    "    g = fp.group_by('obs_id')\n",
+    "    if groupby:\n",
+    "        g = g.groups[g.groups.keys['obs_id']==groupby]\n",
+    "    return g\n",
+    "\n",
+    "def get_uri(table):\n",
+    "    ''' extract the data URI from the data products table '''\n",
+    "    return table['dataURI'].tolist()\n",
+    "\n",
+    "def get_remote_hdu(uri):\n",
+    "    ''' get a remote HDU of an observation '''\n",
+    "    url = 'https://mast.stsci.edu/api/v0.1/Download/file?uri={0}'.format(uri)\n",
+    "    r = requests.get(url)\n",
+    "    hdu = fits.open(BytesIO(r.content))\n",
+    "    return hdu\n",
+    "\n",
+    "def get_img_cut(im, size=50):\n",
+    "    ''' cut out portion of image data for demo purposes '''\n",
+    "    xcen, ycen = int(im.header['CRPIX1']), int(im.header['CRPIX2'])\n",
+    "    return im.data[xcen-size:xcen+size,ycen-size:ycen+size]\n",
+    "\n",
+    "def get_observation(target, obs):\n",
+    "    ''' get image cutout, 1d and 2d spectrum '''\n",
+    "    dp=retrieve_obs(target)\n",
+    "    if not dp:\n",
+    "        raise RuntimeError('No observations found for {0}'.format(target))\n",
+    "\n",
+    "    cut = get_remote_hdu(get_uri(get_type(dp, 'image'))[0])\n",
+    "    cutimg = get_img_cut(cut[1], size=100)\n",
+    "    x1d, x2d = [get_remote_hdu(u) for u in get_uri(get_type(dp, 'spectrum', groupby=obs))]\n",
+    "    return cutimg, x1d, x2d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "@out.capture()\n",
     "def update_data(selected_src):\n",
-    "    hdu1d, hdu, cut = prep_data(selected_src)\n",
+    "\n",
+    "    # get the target STIS observation\n",
+    "    targ, obs = selected_src\n",
+    "    cut, hdu1d, hdu2d = get_observation(targ, obs)\n",
+    "    print('target', targ, obs, cut.shape)\n",
     "    \n",
     "    # update spec1d data\n",
     "    wave, flux = get_xy(hdu1d[1].data)\n",
     "    fig, plot = create_spec1d(wave, flux)\n",
-    "    print('plot info', len(plot.x), len(plot.y))\n",
     "\n",
-    "    spec2d, heat = create_spec2d_heatmap(hdu[1].data)\n",
-    "    print('selected source', selected_src)\n",
-    "   \n",
-    "    img, image = create_cutout(cut[0].data, target=selected_src)\n",
+    "    spec2d, heat = create_spec2d_heatmap(hdu2d[1].data)\n",
+    "    \n",
+    "    img, image = create_cutout(cut, target=targ)\n",
     " \n",
-    "    print('new image title', img.title)\n",
     "    children = [\n",
     "            # load the histogram and slider content\n",
     "            v.Col(xs12=True, lg6=True, xl4=True, children=[\n",
@@ -260,62 +225,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# this class is needed to allow front-end defined components to send events to notebook defined components\n",
-    "# class UpdateRow(v.Row):\n",
-    "#     def __init__(self, **kwargs):\n",
-    "#         super().__init__(**kwargs)\n",
-    "#         self.on_event('change', update_data)    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # create the Vuetify layout using v.Row and v.Col (Vuetify API v2.0 spec - replaces v.Layout and v.Flex, respectively)\n",
-    "# row = v.Row(_metadata={'mount_id': 'protospec'}, dense=True, row=True, wrap=True, align_center=True, children=[\n",
-    "\n",
-    "#     # load the histogram and slider content\n",
-    "#     v.Col(xs12=True, lg6=True, xl4=True, children=[\n",
-    "#         img\n",
-    "#     ]),\n",
-    "\n",
-    "#     # load the line plot content\n",
-    "#     v.Col(xs12=True, xl4=True, children=[\n",
-    "#         spec2d\n",
-    "#     ]),\n",
-    "#     # load the line plot content\n",
-    "#     v.Col(xs12=True, xl4=True, children=[\n",
-    "#         fig\n",
-    "#     ]),       \n",
-    "# ])\n",
-    "\n",
-    "# # attach a change event so the Layout to update the data of all three components\n",
-    "# row.on_event('change', update_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "@out.capture()\n",
     "def update_data_handler(widget, event, data):\n",
     "    # get new data from selected target\n",
-    "    selected_src = int(data)\n",
+    "    print('targets', targets, data)\n",
+    "    selected_src = tozip[targets.index(data)]\n",
     "    print('selected_src', selected_src)\n",
     "    update_data(selected_src)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,12 +250,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "991f2cb2fbdd4b50afc15529d4705125",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "AppBar(absolute=True, app=True, children=[Col(children=[Select(dense=True, items=['NGC346', 'SN2001EP'], label…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# create an app bar to load a select button\n",
-    "btn1 = v.Select(dense=True, outlined=True, label='Target', items=jwst_sources)\n",
+    "btn1 = v.Select(dense=True, outlined=True, label='Target', items=targets)\n",
     "btn1.on_event('change', update_data_handler)\n",
     "v.AppBar(_metadata={'mount_id': 'appbar'}, app=True, absolute=True, children=[\n",
     "    v.Col(class_='col-md-2 col-lg-2', children=[btn1])\n",
@@ -361,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
